Fixed input css where it was too low on the site

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -42,6 +42,8 @@
 .main .form .input {
    position: relative;
    width: 550px;
+   height: 60px;
+   box-shadow: 4px 3px 2px 2px rgb(0 0 0 / 30%);
 }
 .main .form input {
    position: absolute;
